--- a/index.html
+++ b/index.html
@@ -10,40 +10,28 @@
 
 <body>
   <div id="example">
-    <span>금액 : {{amount}}</span>
-  </div>
+      <input type="text" v-model="num" /><br />
+      1부터 입력된 수까지의 합 : {{sum()}}
+    </div>
 
   <script type="text/javascript">
-  var vm = new Vue({
-    el : '#example',
-    data : {amt : 1234567},
-    computed : {
-      amount: {
-        get : function() {
-        var num = new String("" + this.amt);
-        var result = "";
-        var cnt = 0;
-        for(var i=num.length-1; i >= 0; i--){
-          result = num[i] + result;
-          if(i % 3 == 2 && i !== 0){
-            result = ',' + result;
-          }
-        }
-        return result;
+    var model = {
+      name: '소나기'
+    }
+ 
+    var vmSum = new Vue({
+      el: '#example',
+      data: {
+        num: 0
       },
-      set : function(amt) {
-        if(typeof(amt) === String){
-          var result = parseInt(amt.replace(/,/g, ""))
-          if(isNaN(result)) this.amt = 0;
-          else this.amt = result;
-        }
-        else if(typeof(amt)){
-          this.amt = amt;
+      methods: {
+        sum: function() {
+          var n = Number(this.num);
+          if (Number.isNaN(n) || n < 1) return 0;
+          return (n * (n + 1)) / 2;
         }
       }
-    }
-    }
-  })
+    })
   </script>
 </body>
 
