--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
 <body>
   <div id="example">
       <input type="text" v-model="num" /><br />
-      1부터 입력된 수까지의 합 : {{sum()}}
+      1부터 입력된 수까지의 합 : {{sum}}
     </div>
 
   <script type="text/javascript">
     var model = {
       name: '소나기'
     }
- 
+
     var vmSum = new Vue({
       el: '#example',
       data: {
         num: 0
       },
-      methods: {
+      computed: {
         sum: function() {
+          console.log(Date.now());
           var n = Number(this.num);
           if (Number.isNaN(n) || n < 1) return 0;
           return (n * (n + 1)) / 2;
