--- a/3.3_watch/Watched_ex.html
+++ b/3.3_watch/Watched_ex.html
@@ -5,33 +5,34 @@
   <meta charset="utf-8" />
   <title>hello vue.js</title>
   <script src="https://unpkg.com/vue"></script>
-  <!--<script src="vue.js"></script>-->
 </head>
 
 <body>
   <div id="example">
-      <input type="text" v-model="num" /><br />
-      1부터 입력된 수까지의 합 : {{sum}}
+    x : <input type="text" v-model="x" /><br />
+    y : <input type="text" v-model="y" /><br />
+    덧셈 결과 : {{sum}}
     </div>
 
   <script type="text/javascript">
-    var model = {
-      name: '소나기'
-    }
-
-    var vmSum = new Vue({
+    var vm = new Vue({
       el: '#example',
-      data: {
-        num: 0
-      },
-      computed: {
-        sum: function() {
-          console.log(Date.now());
-          var n = Number(this.num);
-          if (Number.isNaN(n) || n < 1) return 0;
-          return (n * (n + 1)) / 2;
+      data: { x:0, y:0, sum: 0},
+      watch: {
+        x: function(v){
+          console.log("## x 변경 : " + v);
+          var result = Number(v) + Number(this.y);
+          if(isNaN(result)) this.sum = 0;
+          else this.sum = result;
+        },
+        y: function(v){
+          console.log("## y 변경 : " + v);
+          var result = Number(v) + Number(this.x);
+          if(isNaN(result)) this.sum = 0;
+          else this.sum = result;
         }
       }
+
     })
   </script>
 </body>
